--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
+    "buffer": "^6.0.3",
     "expo": "~53.0.12",
+    "expo-file-system": "~18.1.10",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "mime": "^4.0.7",
     "react": "19.0.0",
     "react-native": "0.79.4"
   },
